# SwitchBot2MetOfficeWOW

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  upload.yml  weather-upload.yml
src/: main.py  upload.py
